@@ -5,6 +5,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
@@ -17,8 +18,8 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // GrantedAuthority 권한 설정 (예: ROLE_USER)
-        return List.of(() -> "ROLE_USER");
+        // GrantedAuthority 권한 따로 없음
+        return Collections.emptyList();
     }
 
     @Override
